# t5chem

./: .gitignore  C_N_yield.sbatch  LICENSE  Makefile  README.md  README.rst  USPTO_500_MT.csv  USPTO_500_MT.sbatch  USPTO_50k.sbath  USPTO_MIT.sbatch  USPTO_TPL.sbatch  all.csv  environment.ym  mypy.ini  prob.txt  pyproject.toml  requirements.txt  run-comb.sbatch  run-job.sbatch  run_iter.sbatch  run_rxn.sbatch  run_rxn2.sbatch  run_selection.sbatch  run_yield.sbatch  setup.py  slurm-11081335.out  slurm-11190250.out  slurm-1290684.out  slurm-1298573.out  slurm-13720830.out  slurm-13750287.out  slurm-13751470.out  slurm-13751470.out.REMOVED.git-id  slurm-13751510.out  slurm-13776658.out  slurm-13937100.out  slurm-13992636.out  slurm-13997167.out  slurm-13997167.out.REMOVED.git-id  slurm-14005412.out.REMOVED.git-id  (+23 more)
data/: C_N_yield.tar.bz2  Readme.md  USPTO_500_MT.tar.bz2.REMOVED.git-id  sample_data.tar.bz2
docs/: Makefile  conf.py  index.rst  make.bat
models/: USPTO_MT_model.tar.bz2.REMOVED.git-id  simple_pretrain.tar.bz2.REMOVED.git-id
notebooks/: Untitled.ipynb
src/: .~shap_demo-Copy1.ipynb.REMOVED.git-id  Using custom functions and tokenizers.ipynb  __init__.py  evaluate_predictions.py  evaluate_score_rank.py  gen_fingerprint.py  generate_score_eval.py  iterative_selector.py  new_notebook092021.ipynb.REMOVED.git-id  roundtrip_check.py  run_multi_predict.py  run_multi_trainer.py  run_pred_qm9.py  run_pred_yield.py  run_predict.py  run_predict_KLDiv.py  run_pretrain.py  run_selection_yield.py  run_trainer.py  run_trainer_KLD.py  run_trainer_qm9.py  rxn_selector.py  (+3 more)
(+52 files in other folders)
